2012-02-11  Holger Vogt
 * inpcom.c: Robert's patch, reading libs, incs etc.
 
2012-02-11  Holger Vogt
 * tclspice.c, winmain.c, outitf.c, vectors.c, alloc.c:
   outheap (under Windows) removed
   
2012-02-11  Holger Vogt
 * ngspice.h: fprintf --> tcl_fprintf added 
 * tclspice.c: small updates for Windows 
 * outitf.c, vectors.c, alloc.c:
   outheap (under Windows) provided, but deactivated

2012-02-11  Robert Larice
 * src/spicelib/parser/inpptree-parser.c ,
 * src/spicelib/parser/inpptree-parser.h :
   update bison generated files

2012-02-11  Robert Larice
 * src/spicelib/parser/inpptree-parser.y ,
 * src/spicelib/parser/inpptree.c :
   upgrade INPgetTree()
     this parser did parse the *whole* line,
     now it parses as much as it can, and passes the rest back in arg `line'

2012-02-10   Holger Vogt / (Robert Larice)
 * src/frontend/cpitf.c :
   search for tclspinit in `cwd' as well

2012-02-10   Holger Vogt / (Robert Larice)
 * src/frontend/postcoms.c :
   NG_IGNORE something

2012-02-10  Dietmar Warning
 * src/spicelib/devices/dio/*.c,*.h: Typo with junction potential name

2012-02-09  Robert Larice
 * src/frontend/com_sysinfo.c ,
 * src/frontend/mw_coms.c ,
 * src/frontend/outitf.c :
   make use of TMALLOC()

2012-02-09  Robert Larice
 * src/main.c ,
 * src/tclspice.c ,
 * src/maths/cmaths/cmath2.c ,
 * src/maths/misc/randnumb.c :
   unuse srandom() and random()

2012-02-08 Francesco Lannutti (Robert Larice)
 * Makefile.am :
   polish make maintainer-clean, make mrproper

2012-02-07  Robert Larice
 * src/include/ngspice/complex.h :
   #4/4 finish the switch from ngcomplex* args to ngcomplex

2012-02-07  Robert Larice
 * src/ngsconvert.c ,
 * src/tclspice.c ,
 * src/ciderlib/support/database.c ,
 * src/frontend/breakp.c ,
 * src/frontend/com_compose.c ,
 * src/frontend/cpitf.c ,
 * src/frontend/diff.c ,
 * src/frontend/evaluate.c ,
 * src/frontend/options.c ,
 * src/frontend/points.c ,
 * src/frontend/postcoms.c ,
 * src/frontend/rawfile.c ,