@@ -29,13 +29,25 @@ ASRCask(CKTcircuit *ckt, GENinstance *instPtr, int which, IFvalue *value, IFvalu
     NG_IGNORE(select);
 
     switch(which) {
+        case ASRC_TEMP:
+            value->rValue = here->ASRCtemp - CONSTCtoK;
+            return(OK);
+        case ASRC_DTEMP:
+            value->rValue = here->ASRCdtemp;
+            return(OK);    
+        case ASRC_TC1:
+            value->rValue = here->ASRCtc1;
+            return(OK);
+        case ASRC_TC2:
+            value->rValue = here->ASRCtc2;
+            return(OK);
         case ASRC_CURRENT:
             value->tValue = here->ASRCtype == ASRC_CURRENT ? 
-                    here->ASRCtree : NULL;
+                here->ASRCtree : NULL;
             return (OK);
         case ASRC_VOLTAGE:
             value->tValue = here->ASRCtype == ASRC_VOLTAGE ? 
-                    here->ASRCtree : NULL;
+                here->ASRCtree : NULL;
             return (OK);
         case ASRC_POS_NODE:
             value->iValue = here->ASRCposNode;
@@ -44,12 +56,12 @@ ASRCask(CKTcircuit *ckt, GENinstance *instPtr, int which, IFvalue *value, IFvalu
             value->iValue = here->ASRCnegNode;
             return (OK);
         case ASRC_OUTPUTCURRENT:
-	    value->rValue = ckt->CKTrhsOld[here->ASRCbranch];
+            value->rValue = ckt->CKTrhsOld[here->ASRCbranch];
             return (OK);
         case ASRC_OUTPUTVOLTAGE:
-	    value->rValue = ckt->CKTrhsOld[here->ASRCposNode] -
-		ckt->CKTrhsOld[here->ASRCnegNode];
-	    return(OK);
+            value->rValue = ckt->CKTrhsOld[here->ASRCposNode] -
+                ckt->CKTrhsOld[here->ASRCnegNode];
+            return(OK);
         default:
             return (E_BADPARM);
     }
