@@ -15,4 +15,4 @@ extern int ASRCpzLoad(GENmodel*,CKTcircuit*,SPcomplex*);
 extern int ASRCacLoad(GENmodel*,CKTcircuit*);
 extern int ASRCsetup(SMPmatrix*,GENmodel*,CKTcircuit*,int*);
 extern int ASRCunsetup(GENmodel*,CKTcircuit*);
-
+extern int ASRCtemp(GENmodel*,CKTcircuit*);
