@@ -24,11 +24,19 @@ ASRCparam(int param, IFvalue *value, GENinstance *fast, IFvalue *select)
     switch(param) {
         case ASRC_VOLTAGE:
             here->ASRCtype = ASRC_VOLTAGE;
-        here->ASRCtree = value->tValue;
+            here->ASRCtree = value->tValue;
             break;
         case ASRC_CURRENT:
             here->ASRCtype = ASRC_CURRENT;
-        here->ASRCtree = value->tValue;
+            here->ASRCtree = value->tValue;
+            break;
+        case ASRC_TC1:
+            here->ASRCtc1 = value->rValue;
+            here->ASRCtc1Given = TRUE;
+            break;
+        case ASRC_TC2:
+            here->ASRCtc2 = value->rValue;
+            here->ASRCtc2Given = TRUE;
             break;
         default:
             return(E_BADPARM);
