@@ -22,6 +22,8 @@ ASRCpzLoad(GENmodel *inModel, CKTcircuit *ckt, SPcomplex *s)
     ASRCinstance *here;
     double value;
     int i, j;
+    double difference;
+    double factor;
 
     NG_IGNORE(s);
 
@@ -34,6 +36,13 @@ ASRCpzLoad(GENmodel *inModel, CKTcircuit *ckt, SPcomplex *s)
         {
             if (here->ASRCowner != ARCHme)
                 continue;
+
+	    if(!here->ASRCtc1Given) here->ASRCtc1    = 0.0;
+	    if(!here->ASRCtc2Given) here->ASRCtc2    = 0.0;
+
+	    difference = (here->ASRCtemp + here->ASRCdtemp) - 300.15;
+	    factor = 1.0 + (here->ASRCtc1)*difference + 
+		(here->ASRCtc2)*difference*difference;
 
             j = 0;
 
@@ -75,21 +84,21 @@ ASRCpzLoad(GENmodel *inModel, CKTcircuit *ckt, SPcomplex *s)
                 case IF_INSTANCE:
                     if( here->ASRCtype == ASRC_VOLTAGE) {
                         /* CCVS */
-                        *(here->ASRCposptr[j++]) -= asrc_derivs[i];
+                        *(here->ASRCposptr[j++]) -= asrc_derivs[i] / factor;
                     } else {
                         /* CCCS */
-                        *(here->ASRCposptr[j++]) += asrc_derivs[i];
-                        *(here->ASRCposptr[j++]) -= asrc_derivs[i];
+                        *(here->ASRCposptr[j++]) += asrc_derivs[i] / factor;
+                        *(here->ASRCposptr[j++]) -= asrc_derivs[i] / factor;
                     }
                     break;
                 case IF_NODE:
                     if(here->ASRCtype == ASRC_VOLTAGE) {
                         /* VCVS */
-                        *(here->ASRCposptr[j++]) -= asrc_derivs[i];
+                        *(here->ASRCposptr[j++]) -= asrc_derivs[i] / factor;
                     } else {
                         /* VCCS */
-                        *(here->ASRCposptr[j++]) += asrc_derivs[i];
-                        *(here->ASRCposptr[j++]) -= asrc_derivs[i];
+                        *(here->ASRCposptr[j++]) += asrc_derivs[i] / factor;
+                        *(here->ASRCposptr[j++]) -= asrc_derivs[i] / factor;
                     }
                     break;
                 default:
